---
source: compiler-core/src/fsharp/tests/strings.rs
assertion_line: 431
expression: "\nfn id(x) {\n  x\n}\n\npub fn main() {\n  { \"\" |> id } <> { \"\" |> id }\n}\n"
---
module rec my.``mod``
let private id (x: 'u8): 'u8 = begin
    x
end
let main (): string = begin
    begin
        begin
            let _pipe = ""
            (id (_pipe))
        end
    end + begin
        begin
            let _pipe = ""
            (id (_pipe))
        end
    end
end
